<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <!-- <string name="app_name">fuckingmiwok</string> -->
    <string name="app_name">EasyGerman</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Phrases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family Members</string>

    <string name="main_title">LEARN</string>

    <string name="welcome_to_numbers_activity">welcome to numbers activity!</string>
    <string name="colors">Die Farben</string>
    <string name="family_members">Familienmitglieder</string>
    <string name="the_numbers">Die Zahlen</string>
    <string name="basic_phrases">Basis Sätze</string>
</resources>